@@ -52,23 +52,80 @@
 
 ### 2.2 服务端
 
-在具备公网IP和`Docker`环境的云服务器上，执行脚本一键安装 `orbien` 服务端，默认采用的是H2轻量数据库。
+需要 Linux、Docker 与公网 IP，默认使用 H2数据库。
 
 ```shell
-curl -fsSL https://raw.githubusercontent.com/lxien/orbien/main/scripts/docker-install-server.sh -o docker-install-server.sh && chmod +x docker-install-server.sh && sudo sh docker-install-server.sh
+mkdir -p /opt/orbien/data /opt/orbien/logs
+
+cat > /opt/orbien/orbien-server.toml <<'EOF'
+server_addr = "0.0.0.0"
+server_port = 9527
+http_proxy_port = 8080
+https_proxy_port = 8443
+
+[dashboard]
+enabled = true
+addr = "0.0.0.0"
+port = 8020
+username = "admin"
+password = "123456"
+
+[[port_pool.tcp]]
+start = 9050
+end = 9099
+
+[[port_pool.udp]]
+start = 9050
+end = 9099
+EOF
+
+docker run -d \
+  --name orbien-server \
+  --restart unless-stopped \
+  -p 8080:8080 \
+  -p 8443:8443 \
+  -p 8020:8020 \
+  -p 9527:9527 \
+  -p 9050-9099:9050-9099 \
+  -p 9050-9099:9050-9099/udp \
+  -e SPRING_PROFILES_ACTIVE=h2 \
+  -e H2_DATA_DIR=/app/data/orbien-server \
+  -e JAVA_OPTS="-Xms512m -Xmx512m -XX:MaxDirectMemorySize=512m -XX:+UseG1GC --enable-native-access=ALL-UNNAMED" \
+  -e TZ=Asia/Shanghai \
+  -v /opt/orbien/orbien-server.toml:/app/orbien-server.toml:ro \
+  -v /opt/orbien/data:/app/data \
+  -v /opt/orbien/logs:/app/logs \
+  lxien/orbien-server:0.20.1
 ```
 
-| 项目   | 说明                                                                |
-|------|-------------------------------------------------------------------|
-| 面板地址 | `http://<host>:8020`（`admin` / `123456`）                          |
-| 数据目录 | Linux `/opt/orbien`，macOS `~/.orbien`                             |
-| 默认端口 | TCP隧道 `9527` · HTTP `8080` · HTTPS `8443` · TCP/UDP 池 `9050-9099` |
+| 项目   | 说明                                                             |
+|------|----------------------------------------------------------------|
+| 面板   | `http://<host>:8020`（`admin` / `123456`）                       |
+| 数据目录 | `/opt/orbien`                                                  |
+| 端口   | 隧道 `9527` · HTTP `8080` · HTTPS `8443` · TCP/UDP 池 `9050-9099` |
 
 ### 2.3 客户端
 
-#### 2.3.1 二进制运行
+#### 2.3.1 二进制
 
-从 [Releases](https://github.com/lxien/orbien/releases) 下载对应平台二进制可执行文件。
+从 [Releases](https://github.com/lxien/orbien/releases) 下载。
+
+```shell
+Usage: orbien [-hV] [-c=<configFile>] [COMMAND]
+Orbien 内网穿透客户端
+  -c=<configFile>    配置文件路径
+  -h, --help         Show this help message and exit.
+  -V, --version      Print version information and exit.
+Commands:
+  login   保存服务端凭据
+  logout  清除本地凭据
+  run     根据配置文件启动客户端
+  http    启动 HTTP 代理
+  tcp     启动 TCP 代理
+  udp     启动 UDP 代理
+```
+
+案例：
 
 ```shell
 orbien login --server <server-host>:9527 --token <access-token>
@@ -76,22 +133,38 @@ orbien http 8080
 orbien tcp 3306
 ```
 
-#### 2.3.2 使用 Docker 安装
+#### 2.3.2 Docker
 
 ```shell
-curl -fsSL https://raw.githubusercontent.com/lxien/orbien/main/scripts/docker-install-client.sh -o docker-install-client.sh && chmod +x docker-install-client.sh && sudo sh docker-install-client.sh
+mkdir -p /path/to/orbien/logs
+
+cat > /path/to/orbien/orbien.toml <<'EOF'
+server_addr = "<server-host>"
+server_port = 9527
+
+[auth]
+token = "<access-token>"
+
+EOF
+
+docker run -d \
+  --name orbien \
+  --restart unless-stopped \
+  --network host \
+  -e TZ=Asia/Shanghai \
+  -v /path/to/orbien/orbien.toml:/app/orbien.toml:ro \
+  -v /path/to/orbien/logs:/app/logs \
+  lxien/orbien:0.20.1
 ```
 
 #### 2.3.3 Spring Boot Starter
-
-可嵌入 Spring Boot 项目中，快速将Web应用或微服务暴露到公网
 
 ```xml
 
 <dependency>
     <groupId>io.github.lxien</groupId>
     <artifactId>orbien-spring-boot-starter</artifactId>
-    <version>0.3.0</version>
+    <version>0.3.1</version>
 </dependency>
 ```
 
